--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@lexical/react": "^0.3.7",
+    "@lexical/utils": "^0.3.7",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^1.2.1",
     "firebase": "^9.8.4",
     "firebase-functions": "^3.21.2",
     "flowbite": "^1.4.7",
+    "lexical": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -18,6 +25,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-firestore": "^1.0.0",
+    "slate": "^0.81.1",
+    "slate-react": "^0.81.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +54,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.4"
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.5"
   }
 }
