--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@lexical/react": "^0.3.7",
     "@lexical/utils": "^0.3.7",
+    "@material-tailwind/react": "^1.0.8",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -27,7 +28,9 @@
     "redux-firestore": "^1.0.0",
     "slate": "^0.81.1",
     "slate-react": "^0.81.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "y-websocket": "^1.4.3",
+    "yjs": "^13.5.39"
   },
   "scripts": {
     "start": "react-scripts start",
