--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
+    "draft-js": "^0.11.7",
     "firebase": "^9.8.4",
     "firebase-functions": "^3.21.2",
     "flowbite": "^1.4.7",
     "lexical": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.4.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
